Tetris is done in C++ basics

--- a/TETRIS_ver_1/TETRIS_ver_1.vcxproj.filters
+++ b/TETRIS_ver_1/TETRIS_ver_1.vcxproj.filters
@@ -13,5 +13,27 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Images">
+      <UniqueIdentifier>{5cb0de71-7283-427c-b2d6-d4845e8d87fe}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\..\..\..\..\AppData\Local\Temp\Rar$DRa0.265\01 Tetris\images\background.png">
+      <Filter>Images</Filter>
+    </Image>
+    <Image Include="..\..\..\..\..\AppData\Local\Temp\Rar$DRa0.265\01 Tetris\images\frame.png">
+      <Filter>Images</Filter>
+    </Image>
+    <Image Include="..\..\..\..\..\AppData\Local\Temp\Rar$DRa0.265\01 Tetris\images\tiles.png">
+      <Filter>Images</Filter>
+    </Image>
   </ItemGroup>
 </Project>
